<resources>
    <string name="app_name">NiaApp</string>
    <string name="abt_b">About</string>
    <string name="blog_b">Blog</string>
    <string name="contact_b">Contact</string>
    <string name="price_b">Pricing</string>
    <string name="port_b">Portfolio</string>
    <string name="welcome">Welcome to NiaApp</string>
    <string name="abt_text">My name is Nia. I go to CUNY Queens College for a degree in Computer Science. I am from New York. This app was created to serve as a reflection of my website to show what I can do with Android Applications. This app has the same functionality as:</string>
    <string name="website">niaapps.github.io.</string>
    <string name="abt_text_1">
    It is the platform where I take on coding projects so I can do what I love, and support myself! I code Android Apps (iOS is on my horizon though!) and design websites. I also blog: </string>
    <string name="abt_text_2">You can learn more about my past work:</string>
    <string name="abt_text_3">To understand more about how projects are priced tap</string>
    <string name="contact_text">The form below is the quickest way to reach me regarding projects.
You may also email me directly at: \n \t niaapplications@gmail.com

\nBlog comments are also responded to frequently. I look forward to hearing from you regarding exciting new projects, questions about current collaborations, and feedback that helps me better serve my clients\&apos; vision. </string>
    <string name="pricing_text">Projects in the past have ranged from $200-$2,000 USD.

Application projects start at $300, Website design projects start at $200.

Alternatively you can opt for the hourly option, my hourly rate is $28 USD.

Consultation is free. If you have a potential project, contact me here. If you wish to view my previous work click here.

I look forward to working with you!</string>
    <string name="pricing_title">Pricing is determined on a project by project basis.</string>
    <string name="abt_desc">My Face</string>
    <string name="action_contact">Get in touch!</string>
    <string name="resort">ResortApp</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="message">Message:</string>
    <string name="namehint">Ex:Yessenia Suarez</string>
    <string name="emailhint">Ex:yessie17@gmail.com</string>


</resources>