<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.637" />

    <Button
        android:id="@+id/about_button"
        android:fontFamily="@font/work_sans"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:text="@string/abt_b"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blog_button"
        android:fontFamily="@font/work_sans"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="@string/blog_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/contact_button"
        android:fontFamily="@font/work_sans"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="@string/contact_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_button"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/pricing_button"
        android:fontFamily="@font/work_sans"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="@string/price_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_button"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/portfolio_button"
        android:fontFamily="@font/work_sans"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="@string/port_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pricing_button"
        app:layout_constraintVertical_bias="0.032" />


</androidx.constraintlayout.widget.ConstraintLayout>