<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:id="@+id/outer_layout">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:fillViewport="true"

        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outer_layout"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name_box"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="@color/white"
                android:fontFamily="@font/work_sans"
                android:hint="@string/namehint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.292"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/contact_text"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/email_box"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:fontFamily="@font/work_sans"
                android:hint="@string/emailhint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.789"
                app:layout_constraintStart_toEndOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/name_box"
                app:layout_constraintVertical_bias="0.033" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="300dp"

                android:layout_height="120dp"
                android:background="@color/white"
                android:fontFamily="@font/work_sans"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:layout_constraintVertical_bias="0.361" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/work_sans"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_text"
                app:layout_constraintVertical_bias="0.132" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/work_sans"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/work_sans"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/message"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/contact_text"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/work_sans"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/contact_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans"
                android:text="Submit"
                android:textAllCaps="false"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>